- Fixed: Function argument hints would not be shown in some corner cases
- Added function rk.print.code() to write highlighted R code to the output window		# TODO: Next, implement the 'carbon copy' feature
- Box plot plugin gains support for grouped outcome data
- Fixed: Pressing Ctrl+C would not reset syntactically incomplete commands in the R console
- Crosstabs N to 1 plugin gains options to compute proportions and margins (thanks to Andrés Necochea)
- Added convenience R function rk.list() to allow simplification of plugin code		# TODO: ideally, this should be used in all applicable plugins
- Added stack-based window switching using Ctrl+(Shift)+Tab; this replaces the old "Next Window" and "Previous Window" actions
- Fixed: Graphics device windows would disappear when trying to attach them to the main window with some versions of Qt
- Fixed: tcl/tk widgets would locki up after running commands in the R Console
- Provide a template for bug reports, containing standardized information on the RKWard setup in Help->Report Bug...
- When loading a (local) workspace, change the working directory to the directory of the workspace (configurable)
- Include the sidebar position of tool windows when saving / restoring the workplace layout
- "Pending jobs" tool window is not longer shown in the bottom sidebar by default
- Support removing individual tool windows from the sidebars, completely
- Add an action to interrupt all (current and pending) commands
- Fixed: When saving the workplace while closing the session, the workplace layout would not always be saved correctly
- File browser context menu gains many more KDE standard actions (KDE 4.3 and above, only)
- Auxiliary binaries rkward.bin and rkward.rbackend are no longer installed into /usr[/local]/bin/ on Unix
- Fixed: Object name completion would abort early in the script editor with KDE 4.4
- Support function argument hinting for R primitives